Folder actions: Fix alignment

--- a/src/sass/_folder_view.sass
+++ b/src/sass/_folder_view.sass
@@ -6,5 +6,10 @@
 
 .fv.action
   position: relative
-  left: 30px
-  color: white 
+  left: 100px
+  top: -15px
+  color: blue
+
+.fv.btn
+  size: 100%
+  width:100%
